--- a/backend/package.json
+++ b/backend/package.json
@@ -10,16 +10,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "mongoose": "^7.4.5",
-    "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.4.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
