--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,9 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "reactstrap": "8.10.0"
+
   },
   "scripts": {
     "start": "react-scripts start",
